@@ -3,16 +3,19 @@ package com.symphony.bdk.workflow.monitoring.service;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.BDDAssertions.then;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
 import com.symphony.bdk.workflow.api.v1.dto.ActivityInstanceView;
+import com.symphony.bdk.workflow.api.v1.dto.StatusEnum;
 import com.symphony.bdk.workflow.api.v1.dto.TaskTypeEnum;
 import com.symphony.bdk.workflow.api.v1.dto.VariableView;
 import com.symphony.bdk.workflow.api.v1.dto.WorkflowActivitiesView;
 import com.symphony.bdk.workflow.api.v1.dto.WorkflowDefinitionView;
+import com.symphony.bdk.workflow.api.v1.dto.WorkflowInstLifeCycleFilter;
 import com.symphony.bdk.workflow.api.v1.dto.WorkflowInstView;
 import com.symphony.bdk.workflow.api.v1.dto.WorkflowView;
 import com.symphony.bdk.workflow.converter.ObjectConverter;
@@ -25,12 +28,15 @@ import com.symphony.bdk.workflow.monitoring.repository.WorkflowInstQueryReposito
 import com.symphony.bdk.workflow.monitoring.repository.WorkflowQueryRepository;
 import com.symphony.bdk.workflow.monitoring.repository.domain.ActivityInstanceDomain;
 import com.symphony.bdk.workflow.monitoring.repository.domain.VariablesDomain;
+import com.symphony.bdk.workflow.monitoring.repository.domain.WorkflowInstanceDomain;
 import com.symphony.bdk.workflow.swadl.v1.activity.message.SendMessage;
 
 import org.assertj.core.util.Maps;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -76,9 +82,30 @@ class MonitoringServiceTest {
     when(workflowInstQueryRepository.findAllById(anyString())).thenReturn(Collections.emptyList());
     when(objectConverter.convertCollection(anyList(), eq(WorkflowInstView.class))).thenReturn(Collections.emptyList());
     // when
-    List<WorkflowInstView> workflowViews = service.listWorkflowInstances("id");
+    List<WorkflowInstView> workflowViews = service.listWorkflowInstances("id", null);
     //then
     then(workflowViews).isEmpty();
+  }
+
+  @ParameterizedTest
+  @CsvSource({"completed", "COMPLETED", "pending", "PENDING", "active", "FAILED", "failed"})
+  void listWorkflowInstances_completedFilter(String status) {
+    when(workflowInstQueryRepository.findAllById(anyString(), any(StatusEnum.class))).thenReturn(
+        Collections.emptyList());
+    when(objectConverter.convertCollection(anyList(), eq(WorkflowInstView.class))).thenReturn(Collections.emptyList());
+    // when
+    List<WorkflowInstView> workflowViews = service.listWorkflowInstances("id", status);
+    //then
+    then(workflowViews).isEmpty();
+  }
+
+  @Test
+  void listWorkflowInstancesBadStatus() {
+    assertThatExceptionOfType(IllegalArgumentException.class)
+        .as("bad_status is not a valid workflow instance status")
+        .isThrownBy(() -> service.listWorkflowInstances("id", "bad_status"))
+        .satisfies(exception -> assertThat(exception.getMessage()).isEqualTo(
+            "Workflow instance status bad_status is not known. Allowed values [Completed, Pending, Failed]"));
   }
 
   @Test
@@ -103,11 +130,17 @@ class MonitoringServiceTest {
         .type(TaskTypeEnum.MESSAGE_RECEIVED_EVENT)
         .outputs(Maps.newHashMap("key", "value2")).build();
 
-    when(activityQueryRepository.findAllByWorkflowInstanceId(anyString())).thenReturn(Collections.singletonList(
-        ActivityInstanceDomain.builder()
-            .build())); // returns at least one item, otherwise an IllegalArgumentException will be thrown
+    WorkflowInstanceDomain workflowInstanceDomain = WorkflowInstanceDomain.builder().instanceId("instance").build();
+    WorkflowInstView workflowInstView = WorkflowInstView.builder().id("workflow").instanceId("instance").build();
+    when(workflowInstQueryRepository.findAllById("workflow")).thenReturn(
+        Collections.singletonList(workflowInstanceDomain));
+    when(activityQueryRepository.findAllByWorkflowInstanceId(anyString(), anyString(),
+        any(WorkflowInstLifeCycleFilter.class))).thenReturn(Collections.singletonList(ActivityInstanceDomain.builder()
+        .build())); // returns at least one item, otherwise an IllegalArgumentException will be thrown
     when(objectConverter.convertCollection(anyList(), eq(ActivityInstanceView.class))).thenReturn(
         List.of(view1, view2));
+    when(objectConverter.convertCollection(anyList(), eq(WorkflowInstView.class))).thenReturn(
+        List.of(workflowInstView));
 
     // mock graph
     WorkflowNode activity1 = new WorkflowNode();
@@ -137,7 +170,8 @@ class MonitoringServiceTest {
     when(variableQueryRepository.findGlobalVarsByWorkflowInstanceId(anyString())).thenReturn(vars);
 
     // when
-    WorkflowActivitiesView workflowInstanceActivities = service.listWorkflowInstanceActivities("workflow", "instance");
+    WorkflowActivitiesView workflowInstanceActivities = service.listWorkflowInstanceActivities("workflow", "instance",
+        new WorkflowInstLifeCycleFilter(null, null, null, null));
 
     // then
     then(workflowInstanceActivities.getActivities()).hasSize(2);
@@ -154,92 +188,15 @@ class MonitoringServiceTest {
   @Test
   void listWorkflowInstanceActivities_badInstanceId_illegalArgumentException() {
     // given
-    ActivityInstanceView view1 = ActivityInstanceView.builder()
-        .instanceId("instance")
-        .activityId("activity1")
-        .workflowId("workflow")
-        .endDate(Instant.now())
-        .startDate(Instant.now())
-        .duration(Duration.ofMillis(2000))
-        .type(TaskTypeEnum.MESSAGE_RECEIVED_EVENT)
-        .outputs(Maps.newHashMap("key", "value1")).build();
-    ActivityInstanceView view2 = ActivityInstanceView.builder()
-        .instanceId("instance")
-        .activityId("activity2")
-        .workflowId("workflow")
-        .endDate(Instant.now())
-        .startDate(Instant.now())
-        .duration(Duration.ofMillis(2000))
-        .type(TaskTypeEnum.MESSAGE_RECEIVED_EVENT)
-        .outputs(Maps.newHashMap("key", "value2")).build();
-
-    when(activityQueryRepository.findAllByWorkflowInstanceId(anyString())).thenReturn(Collections.emptyList());
-    when(objectConverter.convertCollection(anyList(), eq(ActivityInstanceView.class))).thenReturn(
-        List.of(view1, view2));
-
-    // mock graph
-    WorkflowNode activity1 = new WorkflowNode();
-    SendMessage sendMessage = new SendMessage();
-    sendMessage.setContent("content");
-    sendMessage.setId("activity1");
-    activity1.activity(sendMessage);
-    activity1.id("activity1");
-
-    WorkflowNode activity2 = new WorkflowNode();
-    sendMessage.setContent("content");
-    sendMessage.setId("activity1");
-    activity2.activity(sendMessage);
-    activity2.id("activity2");
-
-    WorkflowDirectGraph directGraph = new WorkflowDirectGraph();
-    directGraph.registerToDictionary("activity1", activity1);
-    directGraph.registerToDictionary("activity2", activity2);
-
-    when(workflowDirectGraphCachingService.getDirectGraph("workflow")).thenReturn(directGraph);
+    when(workflowInstQueryRepository.findAllById("workflow")).thenReturn(Collections.emptyList());
+    when(objectConverter.convertCollection(anyList(), eq(WorkflowInstView.class))).thenReturn(Collections.emptyList());
 
     // when
+    WorkflowInstLifeCycleFilter lifeCycleFilter = new WorkflowInstLifeCycleFilter(null, null, null, null);
     assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(
-            () -> service.listWorkflowInstanceActivities("workflow", "instance"))
+            () -> service.listWorkflowInstanceActivities("workflow", "instance", lifeCycleFilter))
         .satisfies(e -> assertThat(e.getMessage()).isEqualTo(
-            "Either no workflow deployed with id 'workflow' is found or the instance id 'instance' is not correct"));
-  }
-
-  @Test
-  void listWorkflowInstanceActivities_badWorkflowId_illegalArgumentException() {
-    // given
-    ActivityInstanceView view1 = ActivityInstanceView.builder()
-        .instanceId("instance")
-        .activityId("activity1")
-        .workflowId("workflow")
-        .endDate(Instant.now())
-        .startDate(Instant.now())
-        .duration(Duration.ofMillis(2000))
-        .type(TaskTypeEnum.MESSAGE_RECEIVED_EVENT)
-        .outputs(Maps.newHashMap("key", "value1")).build();
-    ActivityInstanceView view2 = ActivityInstanceView.builder()
-        .instanceId("instance")
-        .activityId("activity2")
-        .workflowId("workflow")
-        .endDate(Instant.now())
-        .startDate(Instant.now())
-        .duration(Duration.ofMillis(2000))
-        .type(TaskTypeEnum.MESSAGE_RECEIVED_EVENT)
-        .outputs(Maps.newHashMap("key", "value2")).build();
-
-    when(activityQueryRepository.findAllByWorkflowInstanceId(anyString())).thenReturn(Collections.singletonList(
-        ActivityInstanceDomain.builder()
-            .build())); // returns at least one item, otherwise an IllegalArgumentException will be thrown
-    when(objectConverter.convertCollection(anyList(), eq(ActivityInstanceView.class))).thenReturn(
-        List.of(view1, view2));
-
-    // mock graph
-    when(workflowDirectGraphCachingService.getDirectGraph("workflow")).thenReturn(null);
-
-    // when
-    assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(
-            () -> service.listWorkflowInstanceActivities("workflow", "instance"))
-        .satisfies(e -> assertThat(e.getMessage()).isEqualTo(
-            "Either no workflow deployed with id 'workflow' is found or the instance id 'instance' is not correct"));
+            "Either no workflow deployed with id workflow, or instance is not an instance of it"));
   }
 
   @Test
@@ -278,16 +235,24 @@ class MonitoringServiceTest {
   }
 
   @Test
-  void testListWorkflowInstanceGlobalVars() {
+  void listWorkflowInstanceGlobalVars() {
     // mock graph
     VariablesDomain domain = new VariablesDomain();
     domain.setUpdateTime(Instant.now());
     domain.setRevision(1);
     domain.setOutputs(Maps.newHashMap("key", "value"));
-    when(variableQueryRepository.findGlobalVarsHistoryByWorkflowInstId(anyString())).thenReturn(List.of(domain));
+
+    WorkflowInstanceDomain workflowInstanceDomain = WorkflowInstanceDomain.builder().instanceId("instance").build();
+    WorkflowInstView workflowInstView = WorkflowInstView.builder().id("workflow").instanceId("instance").build();
+    when(workflowInstQueryRepository.findAllById("workflow")).thenReturn(
+        Collections.singletonList(workflowInstanceDomain));
+    when(objectConverter.convertCollection(anyList(), eq(WorkflowInstView.class))).thenReturn(
+        List.of(workflowInstView));
+    when(variableQueryRepository.findGlobalVarsHistoryByWorkflowInstId(anyString(), any(), any())).thenReturn(
+        List.of(domain));
 
     // when
-    List<VariableView> variableViews = service.listWorkflowInstanceGlobalVars("workflow", "id");
+    List<VariableView> variableViews = service.listWorkflowInstanceGlobalVars("workflow", "instance", null, null);
 
     // then
     then(variableViews).hasSize(1);
